; ModuleID = '/home/carl/AnghaBench/freebsd/gnu/usr.bin/gdb/libgdb/extr_fbsd-threads.c_fbsd_thread_attach.c'
source_filename = "/home/carl/AnghaBench/freebsd/gnu/usr.bin/gdb/libgdb/extr_fbsd-threads.c_fbsd_thread_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i8*, i32)* }
%struct.target_ops = type { i32 }

@fbsd_thread_core = common dso_local global i64 0, align 8
@child_ops = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@auto_solib_add = common dso_local global i32 0, align 4
@fbsd_thread_present = common dso_local global i64 0, align 8
@fbsd_thread_active = common dso_local global i32 0, align 4
@fbsd_thread_ops = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @fbsd_thread_attach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fbsd_thread_attach(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  store i64 0, i64* @fbsd_thread_core, align 8
  %5 = load i32 (i8*, i32)*, i32 (i8*, i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @child_ops, i32 0, i32 0), align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 %5(i8* %6, i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @auto_solib_add, align 4
  %11 = call i32 @SOLIB_ADD(i8* null, i32 %9, %struct.target_ops* null, i32 %10)
  %12 = load i64, i64* @fbsd_thread_present, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %2
  %15 = load i32, i32* @fbsd_thread_active, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %14
  %18 = call i32 @push_target(i32* @fbsd_thread_ops)
  br label %19

19:                                               ; preds = %17, %14, %2
  ret void
}

declare dso_local i32 @SOLIB_ADD(i8*, i32, %struct.target_ops*, i32) #1

declare dso_local i32 @push_target(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
